[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Particles/blood.png" type="Texture" id=1]
[ext_resource path="res://Audio/SFX/demon_laugh.wav" type="AudioStream" id=2]
[ext_resource path="res://Sprites/Enemies/demon.png" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/headshot.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/enemy.gd" type="Script" id=5]

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/blood:process_material:emission_sphere_radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "block"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.5 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.09,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:monitorable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/blood:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite/blood:process_material:emission_sphere_radius")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.965936, 1 ),
"update": 0,
"values": [ 1.0, 16.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "walk"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.5, 16 )

[node name="demon" type="Area2D"]
collision_layer = 4
collision_mask = 17
monitoring = false
monitorable = false
script = ExtResource( 5 )
Chance_To_Spawn = 0.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 3 )
hframes = 8
vframes = 2

[node name="blood" type="CPUParticles2D" parent="Sprite"]
material = SubResource( 8 )
emitting = false
amount = 10
one_shot = true
speed_scale = 4.0
explosiveness = 0.2
randomness = 1.0
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, 0 )
initial_velocity_random = 1.0
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 200.0
linear_accel_random = 1.0
radial_accel = 20.0
radial_accel_random = 1.0
tangential_accel_random = 1.0
damping = 5.0
damping_random = 1.0
angle = 720.0
angle_random = 1.0
scale_amount = 4.0
scale_amount_random = 1.0
anim_speed = 1.0
anim_speed_random = 0.6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
playback_speed = 1.25
anims/RESET = SubResource( 4 )
anims/block = SubResource( 3 )
anims/die = SubResource( 5 )
anims/walk = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 19.5, 4 )
shape = SubResource( 6 )

[node name="wallcast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 16

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true
max_distance = 800.0
bus = "SFX"

[node name="demon_laugh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 800.0
bus = "SFX"

[connection signal="area_entered" from="." to="." method="_on_mummy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_mummy_body_entered"]
